[package]
name = "libnexus"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0"

[dependencies]
bytes = "1.8.0"
chrono = "0.4.38"
libgssapi = "0.8.1"
picky-asn1 = "0.9.0"
picky-asn1-der = "0.5.0"
picky-krb = "0.9.0"
rand = "0.8.5"
tokio.workspace = true
tracing = "0.1.40"
uuid = { version = "1.11.0", features = ["v4"] }
